--- a/src/views/partials/_header.pug
+++ b/src/views/partials/_header.pug
@@ -9,7 +9,7 @@ header.header
 				.sh-burger-wrap.sh-burger-wrap--active
 					.sh-burger.sh-burger--cross
 						span
-				ul.header-main-menu.header-main-menu--tablet-active
+				ul.header-main-menu.header-main-menu--mobile-active
 					li.hmm-item
 						a.hmm-item__a(href="") Акции
 					li.hmm-item.hmm-item--has-sub
@@ -141,3 +141,7 @@ header.header
 			.header-offer-info
 				a.header-offer-info__link(href="") Запись на прием
 				.header-offer-info__desc 5% скидка при записи онлайн
+
+.header-offer-info.header-offer-info--mob
+	a.header-offer-info__link(href="") Запись на прием
+	.header-offer-info__desc 5% скидка при записи онлайн
