--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -2,6 +2,7 @@
 	position: fixed;
 	width: 100%;
 	background: #F3EBE0;
+	z-index: 50;
 }
 
 .header-container {
@@ -13,6 +14,16 @@
 		align-items: center;
 		position: relative;
 		max-width: calc(100% - 60px);
+	}
+
+	@include _979 {
+		max-width: calc(100% - 15px);
+		margin-right: 0;
+		position: static;
+	}
+
+	@include _768 {
+		height: 64px;
 	}
 }
 
@@ -45,7 +56,24 @@
 }
 
 .header-main-logo {
-	margin-right: 56px;
+	img {
+		height: 57px;
+		width: auto;
+
+		@include _768 {
+			height: 37px;
+			width: auto;
+		}
+	}
+
+	@include _1500 {
+		margin-right: 56px;
+	}
+
+	@include _979 {
+		margin-right: 15px;
+		flex-grow: 1;
+	}
 }
 
 .header-main-menu-wrap {
@@ -54,6 +82,10 @@
 		height: 100%;
 
 		position: static;
+	}
+
+	@include _979 {
+		flex-grow: 0;
 	}
 }
 
@@ -137,6 +169,17 @@
 			line-height: 22px;
 			text-align: left;
 		}
+
+		@include _979 {
+			text-align: center;
+		}
+
+		@include _768 {
+
+			font-weight: 600;
+			font-size: 16px;
+			line-height: 20px;
+		}
 	}
 
 	&__desc {
@@ -156,6 +199,49 @@
 			font-size: 18px;
 			line-height: 125%;
 			text-align: left;
+		}
+
+		@include _979 {
+			text-align: center;
+		}
+
+		@include _768 {
+
+			font-size: 15px;
+			line-height: 125%;
+		}
+	}
+
+	@include _979 {
+		display: none;
+	}
+
+	&--mob {
+		@include _min980 {
+			display: none;
+		}
+
+		@include _979 {
+			box-sizing: border-box;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			position: fixed;
+			z-index: 45;
+			top: 106px;
+			left: 0;
+			width: 100%;
+			text-align: center;
+			background: #E6DFD6;
+			padding: 10px;
+			padding-top: 8px;
+			padding-bottom: 5px;
+		}
+
+		@include _768 {
+			top: 64px;
+
+
 		}
 	}
 }
@@ -194,6 +280,33 @@ img {}
 	&--open-sub {
 		position: static !important;
 	}
+
+	@include _979 {
+
+		&,
+		&.header-main-menu--open-sub {
+			position: absolute !important;
+			left: 0;
+			margin-left: 0;
+			width: 100%;
+		}
+
+		&--mobile-active {
+			max-height: calc(99vh - 106px);
+			height: calc(99vh - 106px);
+			padding: 38px 55px;
+
+
+		}
+	}
+
+	@include _768 {
+		&--mobile-active {
+			max-height: calc(99vh - 64px);
+			height: calc(99vh - 64px);
+		}
+	}
+
 }
 
 
@@ -351,6 +464,21 @@ img {}
 			padding: 50px 56px;
 		}
 	}
+
+	@include _979 {
+		left: 0;
+		margin-left: 0;
+		position: absolute !important;
+		top: 0;
+		z-index: 51;
+		background: #ffffff;
+		padding: 38px 55px;
+		&--mobile-active{
+
+		opacity: 1;
+		pointer-events: all;
+		}
+	}
 }
 
 .hmm-sub-item {
@@ -408,6 +536,11 @@ img {}
 		box-sizing: border-box;
 	}
 
+	@include _979 {
+		height: 100%;
+
+		padding: 38px 55px;
+	}
 }
 
 .hmm-sub-menu__services-inner {
@@ -423,6 +556,12 @@ img {}
 	@include _1500 {
 		height: unset;
 		width: 100%;
+	}
+
+	@include _979 {
+		height: 100%;
+		display: block;
+		border: none;
 	}
 }
 
@@ -486,18 +625,22 @@ img {}
 		min-width: 20%;
 		max-width: 20%;
 		position: relative;
+
 		&:not(:nth-child(5n)) {
 			border-right: 1px solid #d8d0c8;
 		}
-		&__a{
+
+		&__a {
 			position: absolute;
 			left: 0;
 			top: 0;
 			width: 100%;
 			height: 100%;
-			z-index: 1;padding: 28px 16px 16px 16px;
+			z-index: 1;
+			padding: 28px 16px 16px 16px;
 		}
-		&::before{
+
+		&::before {
 			content: '';
 			display: block;
 			width: 100%;
@@ -509,10 +652,40 @@ img {}
 			display: none;
 		}
 	}
-	@media screen and (max-width:1060px){
 
-		&__a{
+	@media screen and (max-width:1060px) {
+
+		&__a {
 			padding: 28px 16px 16px 16px;
+		}
+	}
+
+	@include _979 {
+		border: none;
+		width: 100%;
+		max-width: 100%;
+		height: unset;
+
+		&__a {
+			display: block;
+			position: static;
+			width: 100%;
+			height: unset;
+			padding: 0;
+			/* menu font */
+
+		}
+
+		&::before {
+			display: none;
+		}
+
+		&:not(:nth-child(5n)) {
+			border: none;
+		}
+		&+li{
+
+			margin-top: 13px;
 		}
 	}
 }
@@ -532,6 +705,10 @@ img {}
 			transition-duration: .2s;
 		}
 	}
+
+	@include _979 {
+		display: none;
+	}
 }
 
 .hmm-sub-service__name {
@@ -545,6 +722,19 @@ img {}
 	font-size: 16px;
 	font-weight: 600;
 	line-height: 135%;
+
+	@include _979 {
+		font-size: 22px;
+		line-height: 26px;
+		text-align: left;
+
+		color: #615756;
+		margin-top: 0;
+		font-weight: 400;
+		br{
+			display: none;
+		}
+	}
 }
 
 .sh-burger-wrap {
@@ -567,6 +757,11 @@ img {}
 	}
 
 	@include _1500 {}
+
+	@include _979 {
+		border-right: 0;
+		width: 80px;
+	}
 }
 
 .sh-burger {
@@ -604,7 +799,7 @@ img {}
 		transform: translateY(12px);
 	}
 
-	&--cross {
+	&.sh-burger--cross {
 
 		span {
 			height: 0;
@@ -619,7 +814,7 @@ img {}
 		}
 	}
 
-	&--back {
+	&.sh-burger--back {
 		span {
 			height: 0;
 
@@ -635,4 +830,27 @@ img {}
 		}
 	}
 
+	@include _979 {
+		width: 32px;
+
+		span,
+		span::before,
+		span::after {
+			width: 32px;
+			height: 2px;
+			margin-top: -1px;
+			margin-left: -16px;
+		}
+
+
+		span::before {
+			transform: translateY(-10px);
+		}
+
+		span::after {
+			transform: translateY(10px);
+		}
+
+
+	}
 }
