--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -198,3 +198,10 @@ block main
 							<svg width="19" height="34" viewBox="0 0 19 34" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M0.556368 1.41421L1.97058 0L18.9411 16.9706L1.97058 33.9411L0.556368 32.5269L16.1127 16.9706L0.556368 1.41421Z"/>
 							</svg>
+
+
+	.section-separator.container.container--dpr
+
+	section.s-pad.specials
+		.container.container--dpr
+			h2.h2.ta-center  Акции и скидки
