--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -205,3 +205,23 @@ block main
 	section.s-pad.specials
 		.container.container--dpr
 			h2.h2.ta-center  Акции и скидки
+			.specials__container
+				.specials__left
+					.specials__filters
+						a.specials__filter.active(href="javascript:;" data-cat="all") Все акции
+						a.specials__filter(href="javascript:;" data-cat="1") Адмиралтейская
+						a.specials__filter(href="javascript:;" data-cat="2") Тех. Институт
+						a.specials__filter(href="javascript:;" data-cat="3") Политехническая
+					a.specials__subscribe(href="") Хочу получать уведомления <br>об акциях и скидках на email
+				.specials__right
+					.specials__slider
+						.specials__slide(data-cat="1")
+							img(src="images/special.jpg")
+						.specials__slide(data-cat="2")
+							img(src="images/special.jpg")
+						.specials__slide(data-cat="1")
+							img(src="images/special.jpg")
+						.specials__slide(data-cat="2")
+							img(src="images/special.jpg")
+						.specials__slide(data-cat="3")
+							img(src="images/special.jpg")
