--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -225,3 +225,141 @@ block main
 							img(src="images/special.jpg")
 						.specials__slide(data-cat="3")
 							img(src="images/special.jpg")
+
+
+	.section-separator.container.container--dpr
+
+	section.s-pad.doctors
+		.container.container--dpr
+			h2.h2.ta-center  Наши врачи
+			.doctors__container
+				.doctors__filters
+					a.doctors__filter.active(href="javascript:;" data-cat="all") Все акции
+					a.doctors__filter(href="javascript:;" data-cat="1") Адмиралтейская
+					a.doctors__filter(href="javascript:;" data-cat="3") Политехническая
+					a.doctors__filter(href="javascript:;" data-cat="2") Тех. Институт
+			.doctors__slider
+				a.doctors__item(href="" data-cat="1")
+					span.doctors__image.doctors__image--1
+						img(src="images/doctor.jpg")
+					span.doctors__name Шаманова Инесса
+					span.doctors__role Врач-Ортодонт
+				a.doctors__item(href="" data-cat="2")
+					span.doctors__image.doctors__image--2
+						img(src="images/doctor.jpg")
+					span.doctors__name Шаманова Инесса
+					span.doctors__role Врач-Терапевт, детский стоматолог
+				a.doctors__item(href="" data-cat="3")
+					span.doctors__image.doctors__image--3
+						img(src="images/doctor.jpg")
+					span.doctors__name Шаманова Инесса
+					span.doctors__role Врач-Ортодонт
+				a.doctors__item(href="" data-cat="1")
+					span.doctors__image.doctors__image--1
+						img(src="images/doctor.jpg")
+					span.doctors__name Шаманова Инесса
+					span.doctors__role Врач-Терапевт, детский стоматолог
+				a.doctors__item(href="" data-cat="2")
+					span.doctors__image.doctors__image--2
+						img(src="images/doctor.jpg")
+					span.doctors__name Шаманова Инесса
+					span.doctors__role Врач-Ортодонт
+				a.doctors__item(href="" data-cat="3")
+					span.doctors__image.doctors__image--3
+						img(src="images/doctor.jpg")
+					span.doctors__name Шаманова Инесса
+					span.doctors__role Врач-Терапевт, детский стоматолог
+				a.doctors__item(href="" data-cat="1")
+					span.doctors__image.doctors__image--1
+						img(src="images/doctor.jpg")
+					span.doctors__name Шаманова Инесса
+					span.doctors__role Врач-Ортодонт
+				a.doctors__item(href="" data-cat="2")
+					span.doctors__image.doctors__image--2
+						img(src="images/doctor.jpg")
+					span.doctors__name Шаманова Инесса
+					span.doctors__role Врач-Терапевт, детский стоматолог
+				a.doctors__item(href="" data-cat="3")
+					span.doctors__image.doctors__image--3
+						img(src="images/doctor.jpg")
+					span.doctors__name Шаманова Инесса
+					span.doctors__role Врач-Ортодонт
+				a.doctors__item(href="" data-cat="1")
+					span.doctors__image.doctors__image--1
+						img(src="images/doctor.jpg")
+					span.doctors__name Шаманова Инесса
+					span.doctors__role Врач-Терапевт, детский стоматолог
+
+	.section-separator.container.container--dpr
+
+	section.s-pad.tours
+		.container.container--dpr
+			h2.h2.ta-center  Экскурсия по клиникам «Астра»
+			.tours__container
+				.tours__block
+					a.tours__item(href="" style="background-image: url(images/tour_1.jpg)")
+						span.tours__bottom
+							img.tours__logo(src="img/logo_adm.svg")
+							span.tours__title Адмиралтейская
+						span.tours__top
+							span.tours__btn начать экскурсию
+				.tours__block
+					a.tours__item(href="" style="background-image: url(images/tour_2.jpg)")
+						span.tours__bottom
+							img.tours__logo(src="img/logo_tech.svg")
+							span.tours__title тех. институт
+						span.tours__top
+							span.tours__btn начать экскурсию
+				.tours__block
+					a.tours__item(href="" style="background-image: url(images/tour_3.jpg)")
+						span.tours__bottom
+							img.tours__logo(src="img/logo_poly.svg")
+							span.tours__title политехническая
+						span.tours__top
+							span.tours__btn начать экскурсию
+
+	.section-separator.container.container--dpr
+
+	section.s-pad.benefits
+		.container.container--dpr
+			h2.h2.ta-center  «Астра» – 22 года доверия
+			.benefits__container
+				.benefits__subtitle Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				.benefits__flex
+					.benefits__item
+						.benefits__img
+							img(src='img/heart.svg')
+						.benefits__title Современное оборудование от известных мировых брендов
+						.benefits__text Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+					.benefits__item
+						.benefits__img
+							img(src='img/heart.svg')
+						.benefits__title Комфортная обстановка и дружеская атмосфера
+						.benefits__text Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+					.benefits__item
+						.benefits__img
+							img(src='img/heart.svg')
+						.benefits__title Постоянный коллектив опытных специалистов
+						.benefits__text Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+					.benefits__item
+						.benefits__img
+							img(src='img/heart.svg')
+						.benefits__title Постоянный коллектив опытных специалистов
+						.benefits__text Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+					.benefits__item
+						.benefits__img
+							img(src='img/heart.svg')
+						.benefits__title Современное оборудование от известных мировых брендов
+						.benefits__text Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+					.benefits__item
+						.benefits__img
+							img(src='img/heart.svg')
+						.benefits__title Комфортная обстановка и дружеская атмосфера
+						.benefits__text Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+
+	.section-separator.container.container--dpr
+
+	section.s-pad.map
+		.container.container--dpr
+			h2.h2.ta-center  Филиалы клиники «Астра»
+			.map__container
