--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,4 +10,5 @@
 @import "partials/mixin";
 @import "partials/main";
 @import "partials/header";
+@import "partials/footer";
 @import "partials/homepage";
