--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -363,3 +363,50 @@ block main
 		.container.container--dpr
 			h2.h2.ta-center  Филиалы клиники «Астра»
 			.map__container
+				.map__left
+				.map__right
+					.map__item
+						.map__title
+							img(src="img/logo_adm.svg")
+							span Адмиралтейская
+						.map__content
+							.map__address Наб. реки Мойки, д. 51
+							.map__comment 5 мин. от м.Адмиралтейская, 7 мин. от м. Невский Проспект (выход на кан. Грибоедова)
+							.map__phones
+								div +7 812-331-66-66;
+								div +7 812-331-66-66;
+								div +7 812-331-66-66;
+								div +7 812-331-66-66;
+							.map__email
+								a(href="mailto:") moika@astraclinic.ru
+							.map__time Пн-Вс: 9:00 - 21:00
+					.map__item
+						.map__title
+							img(src="img/logo_tech.svg")
+							span Тех. Институт
+						.map__content
+							.map__address Наб. реки Мойки, д. 51
+							.map__comment 5 мин. от м.Адмиралтейская, 7 мин. от м. Невский Проспект (выход на кан. Грибоедова)
+							.map__phones
+								div +7 812-331-66-66;
+								div +7 812-331-66-66;
+								div +7 812-331-66-66;
+								div +7 812-331-66-66;
+							.map__email
+								a(href="mailto:") moika@astraclinic.ru
+							.map__time Пн-Вс: 9:00 - 21:00
+					.map__item
+						.map__title
+							img(src="img/logo_poly.svg")
+							span Политехническая
+						.map__content
+							.map__address Наб. реки Мойки, д. 51
+							.map__comment 5 мин. от м.Адмиралтейская, 7 мин. от м. Невский Проспект (выход на кан. Грибоедова)
+							.map__phones
+								div +7 812-331-66-66;
+								div +7 812-331-66-66;
+								div +7 812-331-66-66;
+								div +7 812-331-66-66;
+							.map__email
+								a(href="mailto:") moika@astraclinic.ru
+							.map__time Пн-Вс: 9:00 - 21:00
