--- a/src/style/partials/homepage.scss
+++ b/src/style/partials/homepage.scss
@@ -1164,6 +1164,9 @@
 	&__content{
 		display: none;
 		padding: 24px 0;
+		&.showed{
+			display: block;
+		}
 	}
 	&__address{
 		font-weight: 500;
@@ -1184,6 +1187,11 @@
 		color: #13070C;
 		column-count: 2;
 		margin-top: 16px;
+		&.column{
+			column-count: 1;
+			font-size: 20px;
+			line-height: 180%;
+		}
 	}
 	&__email{
 		margin-top: 16px;
